server_log.txt
file:///Users/Manoj/NeuraSpark/Squadly/server/routes/tripRoutes.js:13
    cancelInvite
    ^^^^^^^^^^^^
SyntaxError: The requested module '../controllers/tripController.js' does not provide an export named 'cancelInvite'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:226:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:335:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:665:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)

Node.js v22.21.0
